[metadata]
name = exmb
version = 0.8.0
url = https://github.com/eXhumer/eXMB
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Bot to mirror r/formula1 highlight clips
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = exmb
install_requires =
    exrc
    exvhp

[options.entry_points]
console_scripts =
    eXMB = exmb:console_main
