[metadata]
name = exmb
version = 0.0.0
url = https://github.com/eXhumer/pyeXMB
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = AGPL-3.0-only
license_files = COPYING.md
description = Subreddit media mirror bot
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.11
zip_safe = False
packages = exmb
install_requires =
    exdc
    exrc
    exvhp

[options.entry_points]
console_scripts =
    eXMB = exmb._main:__program_main

[options.extras_require]
http2 =
    exdc[http2]
    exrc[http2]
    exvhp[http2]

[flake8]
max-line-length = 99
